# rustifyC

./: .gitignore  .zshrc  CMakeLists.txt  README.md  benchmark_scev.sh  demo.sh  demo_all.sh  demo_phase3.sh  demo_phase4.sh  demo_phase5.sh  demo_phase6.sh  dynamic_demo.ll  dynamic_demo_opt  exploit  exploit.ll  out.ll  run_all_benchmarks.sh  run_demo.sh  safe.ll  safe_demo  silent  test3  test_dynamic.ll  test_dynamic_O0.ll
demo_testcases_for_teacher/: 01_spatial_safety_static.c  02_spatial_safety_dynamic.c  03_scev_loop_optimization.c  04_uninitialized_memory.c  05_integer_overflow.c  06_stack_escape.c  07_real_world_combined.c  README.txt  demo_interactive.c  test.c
src/: rustifyC.cpp
test/: a.out  benchmark.sh  compare_clang.sh  demo_dynamic  demo_dynamic_overflow.c  demo_static_overflow.c  edge_cases.c  generate_more_tests.py  generate_tests.py  input.c  juliet_results.txt  loop_test.c  negative_test.c  real_exploit.c  run_juliet.sh  scev_basic.c  scev_basic_opt.ll  silent_corruption.c  static_fail.c  test_escape.c  test_overflow  test_overflow.c  test_possibly_uninit  test_possibly_uninit.c  test_possibly_uninit.ll  test_possibly_uninit_O1.ll  test_scev_perf.c  test_stack_escape_external.c  test_stack_escape_global.c  test_stack_escape_return.c  test_stack_safe.c  test_uninit  test_uninit.c
test/CWE121/: demo_dynamic.c  demo_static.c  dynamic_oob_argv_bad.c  dynamic_oob_calc_bad.c  dynamic_oob_loop_bad.c  dynamic_safe_loop_good.c  genC_200_unsafe_bad.c  genC_201_unsafe_bad.c  genC_202_unsafe_bad.c  genC_203_unsafe_bad.c  genC_204_unsafe_bad.c  (+240 more)
(+18 files in other folders)
